# move-native

./: .editorconfig  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .taplo.toml  .yamlfmt.yaml  .yamlfmt.yml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  _typos.toml  licensesnip.config.jsonc  package-lock.json  rust-toolchain.toml  tarpaulin.toml
.claude/agent-memory/test-coverage-analyst/: MEMORY.md  project_compiler_test_patterns.md  project_zk_crate_testing.md
.claude/agents/: code-reviewer.md  rust-architect.md  test-coverage-analyst.md
.config/: nextest.toml
.github/actions/diffs/: action.yaml
.github/actions/rust-setup/: action.yaml
.github/workflows/: code.yaml  lint.yaml
crates/arm64-classify/: Cargo.toml
crates/arm64-classify/src/: lib.rs
crates/cfg/: Cargo.toml
crates/cfg/src/: arm64.rs  block_graph.rs  builder.rs  call_graph.rs  graph.rs  lib.rs  traits.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: assembly.rs  codegen.rs  compiler.rs  context.rs  error.rs  function.rs  inject.rs  layout.rs  lib.rs  main.rs  mangle.rs  module.rs  object_file.rs  target.rs  types.rs
crates/compiler/src/function/: arithmetic.rs  calls.rs  constants.rs  control_flow.rs  enums.rs  state.rs  storage.rs  structs.rs
crates/compiler/src/module/: all_features.rs  basic.rs  builder.rs  bundle.rs  fixtures.rs  framework.rs  info.rs  kitchen_sink.rs
crates/compiler/tests/: custom.rs  deepbook.rs  integration.rs  move_contracts.rs  object.rs  riscv.rs  smoke.rs  stdlib.rs  sui.rs  sui_framework.rs  suins.rs
crates/gas-instrument/: Cargo.toml
crates/gas-instrument/src/: cfg.rs  error.rs  instrument.rs  lib.rs  main.rs  parser.rs
crates/gas-instrument/tests/: integration.rs
crates/graph/: Cargo.toml
crates/graph/src/: arm64.rs  block_graph.rs  call_graph.rs  traits.rs
crates/instrumenter/: Cargo.toml
crates/instrumenter/src/: error.rs  instrument.rs  lib.rs  main.rs  parser.rs
crates/instrumenter/tests/: integration.rs
crates/move-to-llvm/: Cargo.toml
crates/move-to-llvm/src/: assembly.rs  codegen.rs  compiler.rs  context.rs  error.rs  function.rs  lib.rs  main.rs  mangle.rs  module.rs  target.rs  test_utils.rs  types.rs
crates/move-to-llvm/src/function/: arithmetic.rs  calls.rs  constants.rs  control_flow.rs  mod.rs  state.rs  storage.rs  structs.rs
crates/move-to-llvm/src/module/: all_features.rs
crates/move-to-llvm/tests/: integration.rs  move_contracts.rs
crates/move-to-llvm/tests/common/: mod.rs
crates/native-verifier/: Cargo.toml
crates/native-verifier/src/: decode.rs  error.rs  lib.rs  main.rs  stack.rs  verify.rs  whitelist.rs
crates/native-verifier/tests/: integration.rs
crates/runner/: Cargo.toml
crates/runner/src/: assembler.rs  error.rs  lib.rs  main.rs  pipeline.rs
crates/runtime/: Cargo.toml  SECURITY_FIXES.md
crates/runtime/src/: cache.rs  entry.rs  error.rs  execute.rs  fault.rs  lib.rs  loader.rs  module.rs  signal.rs  slot.rs  store.rs
crates/runtime/src/slot/: linux.rs  macos.rs
crates/runtime/tests/: integration.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: decode.rs  error.rs  gas.rs  lib.rs  main.rs  stack.rs  verify.rs
crates/verifier/tests/: integration.rs
crates/zero-knowledge/: Cargo.toml
crates/zero-knowledge/examples/: prove_add.rs
crates/zero-knowledge/src/: error.rs  lib.rs  linker.rs  main.rs  pipeline.rs  proof.rs  sp1.rs  stub.rs
crates/zero-knowledge/src/sp1/: ir.rs  sha256.rs  syscall.rs
crates/zero-knowledge/tests/: custom.rs
tests/asm/: forward_only.s  function_call.s  large_block.s  nested_loops.s  null_deref.s  unconditional_loop.s  unmapped_jump.s
tests/asm_samples/: cbz_loop.s  multiple_functions.s  nested_fault.s  simple_loop.s  stack_then_fault.s  test_loop.s
tests/move/custom/: bitmath.mv  checked_math.move  generics.move  objects.move  vectors.move  vectors.mv
tests/move/popular/deepbook/: book.mv
tests/move/popular/suins/: admin.mv  auction.mv  config.mv  controller.mv  core_config.mv  domain.mv  payment.mv  pricing_config.mv  suins.mv  suins_registration.mv  update_image.mv
tests/move_samples/: add.move  add.mv  control_flow.move
tests/move_samples/custom/: bitmath.move  checked_math.mv  control_flow.mv  generics.mv  geometry.move  geometry.mv  objects.mv
