[package]
name = "arm64-classify"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Single source of truth for Arm64 opcode classification"

[dependencies]
# Arm64 opcode types
yaxpeax-arm = "0.4"

# Static map initialization
lazy_static = "1.4"