[package]
name = "cfg"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Control flow graph analysis and Arm64 opcode classification"

[dependencies]
# Arm64 opcode types
yaxpeax-arm = "0.4"

# Static map initialization
lazy_static = "1.4"

# Graph data structure for CFG
petgraph = "0.8"