[package]
name = "compiler"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Compile Move bytecode to Arm64 via LLVM"

[lib]
path = "src/lib.rs"

[features]
# Exposes `Compiler::new_for_test` for downstream crates' unit tests.
test-util = []

[dependencies]
ethnum = "1.5"
inkwell.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-model.workspace = true
move-stackless-bytecode.workspace = true
num-bigint = "0.5"
thiserror.workspace = true

[dev-dependencies]
indoc = "2.0"
inkwell.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
object.workspace = true
rstest.workspace = true
