[package]
name = "gas-instrument"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Arm64 assembly gas instrumentation tool"

[[bin]]
name = "gas-instrument"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
# Shared CFG and Arm64 opcode classification
cfg = { path = "../cfg" }

# Graph algorithms for CFG (will be removed once CFG moves to cfg crate)
petgraph = "0.8"

[dev-dependencies]
indoc = "2"
