[package]
name = "instrumenter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Arm64 assembly gas instrumentation tool"

[[bin]]
name = "instrumenter"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
cfg.workspace = true
petgraph.workspace = true
thiserror.workspace = true

[dev-dependencies]
indoc = "2"
