[package]
name = "move-to-llvm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Compile Move bytecode to Arm64 via LLVM"

[[bin]]
name = "move-to-llvm"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
ethnum = "1"
inkwell.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-model.workspace = true
move-stackless-bytecode.workspace = true
num-bigint = "0.4"
thiserror.workspace = true

[dev-dependencies]
indoc = "2"
libc = "0.2"
move-binary-format.workspace = true
move-core-types.workspace = true
object = "0.38"
tempfile.workspace = true
