[package]
name = "native-verifier"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Verifies Arm64 binaries for deterministic execution and gas instrumentation"

[dependencies]
# Arm64 disassembly - stable Rust, well-maintained
yaxpeax-arm = "0.4"
yaxpeax-arch = "0.3"

# Binary format parsing (Mach-O, ELF)
object = { version = "0.38.1", default-features = false, features = [
    "read",
    "macho",
] }

# Error handling
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
gas-instrument = { path = "../gas-instrument" }
