[package]
name = "runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified pipeline and CLI for Move native compilation"

[[bin]]
name = "runner"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
compiler.workspace = true
instrumenter.workspace = true
move-binary-format.workspace = true
object.workspace = true
runtime.workspace = true
tempfile.workspace = true
thiserror.workspace = true
verifier.workspace = true
