[package]
name = "runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Execution runtime for gas-instrumented native Move code"

[lib]
path = "src/lib.rs"

[dependencies]
libloading = "0.9"
libc = "0.2"
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
gas-instrument.workspace = true
