[package]
name = "verifier"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Verifies Arm64 binaries for deterministic execution and gas instrumentation"

[dependencies]
cfg.workspace = true
object = { version = "0.38", default-features = false, features = ["elf", "macho", "read"] }
thiserror.workspace = true
yaxpeax-arch.workspace = true
yaxpeax-arm.workspace = true

[dev-dependencies]
instrumenter.workspace = true
tempfile.workspace = true
